music player working, can be improved